# Checkers

./: CMakeLists.txt  README.md  checkers.c  checkers.h  damas2.c  gamelogic.h  gamestate.c  gamestate.h  input.c  input.h  main.c  player.c  player.h  renderer.h
